--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "woobajar-server",
+  "name": "woodbazar-server",
   "version": "1.0.0",
-  "description": "woobajar for programming hero assignment 12",
+  "description": "woodbazar for programming hero assignment 12",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
